--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "openai-agents>=0.6.4",
     "python-dotenv>=1.2.1",
     "qdrant-client[fastembed]>=1.16.2",
+    "playwright>=1.41.2",
     "requests>=2.32.5",
     "trafilatura>=2.0.0",
+    "google-generativeai>=0.5.4",
     "uvicorn>=0.38.0",
 ]
